Minor Bug fixes and spacing for TSBCS

--- a/simstyle.css
+++ b/simstyle.css
@@ -1,7 +1,7 @@
   #background{
     display: table;
     height: 100%;
-    width: 100%;
+    width: 95%;
   }
 
   div{
@@ -24,7 +24,7 @@
 
   #control{ 
   height: 800px;
-  width:200px; 
+  width: 20%; 
   margin: 20px;
   } 
 
